<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/switch_mode"
        android:icon="@drawable/ic_baseline_apps_24"
        android:title="@string/grid"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction"/>

    <item
        android:id="@+id/start_downloads"
        android:icon="@drawable/ic_baseline_play_arrow_24"
        android:title="@string/start_downloads"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/pause_downloads"
        android:icon="@drawable/ic_baseline_pause_24"
        android:title="@string/pause_downloads"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/clear_list"
        android:icon="@drawable/ic_delete_forever_black_24dp"
        android:title="@string/clear_finished_download"
        android:visible="false"
        app:showAsAction="ifRoom" />

</menu>
